# csfs

./: .gitignore  CMakeLists.txt  COMMIT_HISTORY_CHANGELOG.md  COMMIT_HISTORY_COMPLETE.md  FULL_CLONE_INDEX.md  FULL_CLONE_SUMMARY.md  GIT_CLONE_GUIDE.md  GIT_CLONING_FEATURE.md  IMPLEMENTATION_COMPLETE.md  Makefile  README.md
docs/: COMMIT_HISTORY_GUIDE.md  COMMIT_HISTORY_IMPLEMENTATION.md  README_COMMIT_HISTORY.md
include/: completion.h  editor.h  fetch.h  fs.h  git.h  man.h  shell.h
src/: fs.c  main.c  shell.c
src/completion/: completion.c
src/editor/: editor.c
src/fetch/: fetch.c
src/man/: man.c
